// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component prop snapshots all props are not set 1`] = `
<scale-logo exportparts="logo-svg">
  <template shadowrootmode="open">
    <style>
      :host { --logo-size: 38px; }
    </style>
    <a href="javascript:void(0);" part="logo variant-magenta" tabindex="0" title="Telekom Logo">
      <scale-logo-svg color="magenta" logotitle="Telekom Logo" part="icon"></scale-logo-svg>
    </a>
  </template>
</scale-logo>
`;

exports[`component prop snapshots all props are set 1`] = `
<scale-logo exportparts="logo-svg">
  <template shadowrootmode="open">
    <style>
      :host { --logo-size: 100px; }
    </style>
    <a href="https://www.telekom.de/start" part="logo variant-white transparent" tabindex="0" title="Telekom Logo">
      <scale-logo-svg color="white" logotitle="Telekom Logo" part="icon"></scale-logo-svg>
    </a>
  </template>
</scale-logo>
`;

exports[`component prop snapshots all props should handle no link 1`] = `
<scale-logo exportparts="logo-svg">
  <template shadowrootmode="open">
    <style>
      :host { --logo-size: 38px; }
    </style>
    <a href="" part="logo variant-magenta" tabindex="0" title="Telekom Logo">
      <scale-logo-svg color="magenta" logotitle="Telekom Logo" part="icon"></scale-logo-svg>
    </a>
  </template>
</scale-logo>
`;
